Conflict fix
Minor css fix aswell, fixed linebreak on upload

--- a/client/webbchat/src/index.css
+++ b/client/webbchat/src/index.css
@@ -234,7 +234,11 @@ label{
   height: 5.5vh !important;
   border: 2px solid #BBDEFB !important;
   text-align: center;
-  line-height: 5.5vh;
+  line-height: 2.5vh;
+}
+
+#uploadText{
+  display: inline-block;
 }
 
 #chatContent{
